fix: impl connection pool for blockchain service to prevent from connection proliferation

--- a/.env.example
+++ b/.env.example
@@ -8,11 +8,11 @@ POLLING_INTERVAL=120
 
 TEST_DB_URL=
 
-SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/<api-key>
-ARBITRUM_SEPOLIA_RPC_URL=https://arb-sepolia.g.alchemy.com/v2/<api-key>
-BASE_SEPOLIA_RPC_URL=https://base-sepolia.g.alchemy.com/v2/<api-key>
-OPTIMISM_SEPOLIA_RPC_URL=https://opt-sepolia.g.alchemy.com/v2/<api-key>
-POLYGON_AMOY_RPC_URL=https://polygon-amoy.g.alchemy.com/v2/<api-key>
+SEPOLIA_RPC_URL=
+ARBITRUM_SEPOLIA_RPC_URL=
+BASE_SEPOLIA_RPC_URL=
+OPTIMISM_SEPOLIA_RPC_URL=
+POLYGON_AMOY_RPC_URL=
 
 GOGC=50
 GOMEMLIMIT=400MiB
