feat: add Arbitrum and Base RPC URLs

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,9 @@ BASE_SEPOLIA_RPC_URL=
 OPTIMISM_SEPOLIA_RPC_URL=
 POLYGON_AMOY_RPC_URL=
 
+ARBITRUM_RPC_URL=
+BASE_RPC_URL=
+
 GOGC=50
 GOMEMLIMIT=400MiB
 GOMAXPROCS=1
